{
  "version": 4,
  "terraform_version": "1.5.1",
  "serial": 257,
  "lineage": "835910e1-7167-3683-5ef0-e280f4750df6",
  "resources": [
    {
      "module": "module.bastion",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "bastion-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-07-12T00:41:34.640-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/bailleul-charles/global/firewalls/app-cluster-bastion-ssh",
            "log_config": [],
            "name": "app-cluster-bastion-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/bailleul-charles/global/networks/kubernetes-cluster",
            "priority": 1000,
            "project": "bailleul-charles",
            "self_link": "https://www.googleapis.com/compute/v1/projects/bailleul-charles/global/firewalls/app-cluster-bastion-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "bastion"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.google_networks.google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.bastion",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "allow_stopping_for_update": true,
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-10-buster-v20230711",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/bailleul-charles/zones/europe-west1-b/disks/app-cluster-bastion"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/bailleul-charles/zones/europe-west1-b/instances/app-cluster-bastion",
            "instance_id": "5999145554066794410",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-micro",
            "metadata_fingerprint": "NmfdtU5XTAg=",
            "metadata_startup_script": "sudo apt-get update -y\r\nsudo apt-get install -y tinyproxy\r\n",
            "name": "app-cluster-bastion",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.210.91.18",
                    "network_tier": "STANDARD"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/bailleul-charles/global/networks/kubernetes-cluster",
                "network_ip": "10.10.0.2",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/bailleul-charles/regions/europe-west1/subnetworks/kubernetes-cluster--subnet",
                "subnetwork_project": "bailleul-charles"
              }
            ],
            "project": "bailleul-charles",
            "scheduling": [
              {
                "automatic_restart": false,
                "on_host_maintenance": "TERMINATE",
                "preemptible": true
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/bailleul-charles/zones/europe-west1-b/instances/app-cluster-bastion",
            "service_account": [
              {
                "email": "app-cluster-bastion-sa@bailleul-charles.iam.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud-platform"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": true,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "bastion"
            ],
            "tags_fingerprint": "NfTTNVh6sLU=",
            "zone": "europe-west1-b"
          },
          "dependencies": [
            "module.bastion.data.template_file.startup_script",
            "module.bastion.google_service_account.bastion",
            "module.google_networks.google_compute_network.vpc",
            "module.google_networks.google_compute_subnetwork.subnet"
          ]
        }
      ]
    },
    {
      "module": "module.google_networks",
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": true,
            "id": "projects/bailleul-charles/global/networks/kubernetes-cluster",
            "mtu": 0,
            "name": "kubernetes-cluster",
            "project": "bailleul-charles",
            "routing_mode": "GLOBAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/bailleul-charles/global/networks/kubernetes-cluster"
          }
        }
      ]
    },
    {
      "module": "module.google_networks",
      "mode": "managed",
      "type": "google_compute_route",
      "name": "egress_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "description": "",
            "dest_range": "0.0.0.0/0",
            "id": "projects/bailleul-charles/global/routes/egress-internet",
            "name": "egress-internet",
            "network": "https://www.googleapis.com/compute/v1/projects/bailleul-charles/global/networks/kubernetes-cluster",
            "next_hop_gateway": "https://www.googleapis.com/compute/v1/projects/bailleul-charles/global/gateways/default-internet-gateway",
            "next_hop_ilb": "",
            "next_hop_instance": "",
            "next_hop_instance_zone": null,
            "next_hop_ip": "",
            "next_hop_network": "",
            "next_hop_vpn_tunnel": "",
            "priority": 1000,
            "project": "bailleul-charles",
            "self_link": "https://www.googleapis.com/compute/v1/projects/bailleul-charles/global/routes/egress-internet",
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.google_networks.google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.google_networks",
      "mode": "managed",
      "type": "google_compute_router",
      "name": "router",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-07-12T00:41:56.719-07:00",
            "id": "projects/bailleul-charles/regions/europe-west1/routers/kubernetes-cluster-router",
            "name": "kubernetes-cluster-router",
            "network": "https://www.googleapis.com/compute/v1/projects/bailleul-charles/global/networks/kubernetes-cluster",
            "project": "bailleul-charles",
            "region": "europe-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/bailleul-charles/regions/europe-west1/routers/kubernetes-cluster-router"
          },
          "dependencies": [
            "module.google_networks.google_compute_network.vpc",
            "module.google_networks.google_compute_subnetwork.subnet"
          ]
        }
      ]
    },
    {
      "module": "module.google_networks",
      "mode": "managed",
      "type": "google_compute_router_nat",
      "name": "nat_router",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "icmp_idle_timeout_sec": 30,
            "id": "bailleul-charles/europe-west1/kubernetes-cluster-router/kubernetes-cluster--subnet-nat-router",
            "log_config": [
              {
                "enable": true,
                "filter": "ERRORS_ONLY"
              }
            ],
            "min_ports_per_vm": 0,
            "name": "kubernetes-cluster--subnet-nat-router",
            "nat_ip_allocate_option": "AUTO_ONLY",
            "project": "bailleul-charles",
            "region": "europe-west1",
            "router": "kubernetes-cluster-router",
            "source_subnetwork_ip_ranges_to_nat": "LIST_OF_SUBNETWORKS",
            "subnetwork": [
              {
                "name": "kubernetes-cluster--subnet",
                "source_ip_ranges_to_nat": [
                  "ALL_IP_RANGES"
                ]
              }
            ],
            "tcp_established_idle_timeout_sec": 1200,
            "tcp_transitory_idle_timeout_sec": 30,
            "udp_idle_timeout_sec": 30
          },
          "dependencies": [
            "module.google_networks.google_compute_network.vpc",
            "module.google_networks.google_compute_router.router",
            "module.google_networks.google_compute_subnetwork.subnet"
          ]
        }
      ]
    },
    {
      "module": "module.google_networks",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-07-12T00:41:35.280-07:00",
            "gateway_address": "10.10.0.1",
            "id": "projects/bailleul-charles/regions/europe-west1/subnetworks/kubernetes-cluster--subnet",
            "ip_cidr_range": "10.10.0.0/16",
            "name": "kubernetes-cluster--subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/bailleul-charles/global/networks/kubernetes-cluster",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "bailleul-charles",
            "region": "europe-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/bailleul-charles/regions/europe-west1/subnetworks/kubernetes-cluster--subnet"
          },
          "dependencies": [
            "module.google_networks.google_compute_network.vpc"
          ]
        }
      ]
    }
  ]
}